Mint-Y-Cinnamon: Fix the menu search entry to work with larger text
We were clamping the height at 16px. So the text was being cut off when using
larger text.

Closes: https://github.com/linuxmint/mint-themes/issues/152

--- a/src/Mint-Y/cinnamon/cinnamon.css
+++ b/src/Mint-Y/cinnamon/cinnamon.css
@@ -1028,7 +1028,7 @@ StScrollBar {
 
 #menu-search-entry {
   width: 250px;
-  height: 16px;
+  min-height: 16px;
   font-weight: normal;
   caret-color: #202020; }
 
