--- a/src/Mint-Y/cinnamon/sass/_common.scss
+++ b/src/Mint-Y/cinnamon/sass/_common.scss
@@ -1332,7 +1332,7 @@ StScrollBar {
 
 #menu-search-entry {
   width: 250px;
-  height: 16px;
+  min-height: 16px;
   font-weight: normal;
   caret-color: $fg_color;
 
